<resources>
<string name="parse_application_id">6vib3ykygZ4Ws33c1gOhrpSuAEF7nKWYtijZymtL</string>
    <string name="parse_client_key">ZJuHuFMu6mYZPP30OkcQxtEjKJ9cpTFVWoq1EBS2</string>
    <string name="facebook_app_id">801692569977560</string>
    <string name="app_name">Autodromo Hermanos Rodriguez</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyAYCqiwp3mZGjmqrwBuSAaKJdXzyxc4XE8</string>
    <string name="title_activity_comollegar">ComollegarActivity</string>
    <string name="title_activity_autodromo">AutodromoActivity</string>
    <string name="title_activity_ubica_zona">UbicaZonaActivity</string>
    <string name="localiza_tu_zona">LOCALIZA TU ZONA</string>
    <string-array name="zonas_autodromo">
        <item>GRANDSTANDS: 1, 1-A, 2</item>
        <item>GRADAS PLATINO: 5, 9, 10, 11</item>
        <item>GRADAS ORO: 3, 4, 6, 7, 8, 12</item>
        <item>FORO SOL SUR: 14</item>
        <item>FORO SOL NORTE: 15</item>
        <item>ADMINISIÓN GENERAL: 13, 2-A, 2-B, 6-A</item>
    </string-array>
    <string name="title_activity_servicios">ServiciosActivity</string>
    <string name="titulo_alimentos">ALIMENTOS</string>
    <string name="titulo_banos">BAÑOS</string>
        <string name="titulo_emergencia">SERVICIOS DE EMERGENCIA</string>
    <string name="titulo_tienda">TIENDAS</string>
    <string name="descripcion_alimentos">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="descripcion_banos">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	</string>
    <string name="descripcion_emergencia">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	</string>
    <string name="descripcion_tienda">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_horarios">HorariosActivity</string>
    <string name="title_activity_resultados">ResultadosActivity</string>
    <string name="ver_ranking_general">VER RANKING GENERAL</string>
    <string name="title_activity_ranking_general">RankingGeneralActivity</string>
    <string name="title_activity_resultados_detalle">ResultadosDetalleActivity</string>
    <string name="title_activity_pilotos">PilotosActivity</string>
    <string name="title_activity_pilotos_detalle">PilotosDetalleActivity</string>
    <string name="piloto_nombre">NOMBRE</string>
    <string name="piloto_numero">NÚMERO</string>
    <string name="piloto_nacionalidad">NACIONALIDAD</string>
    <string name="piloto_fecha_nacimiento">FECHA DE NACIMIENTO</string>
    <string name="piloto_lugar_nacimiento">LUGAR DE NACIMIENTO</string>
    <string name="piloto_campeonatos">CAMPEONATOS</string>
    <string name="title_activity_ciudad_mexico">CiudadMexicoActivity</string>
    <string name="title_activity_ciudad_mexico_detalle">CiudadMexicoDetalleActivity</string>
    <string name="title_activity_hospedaje">HospedajeActivity</string>
    <string name="title_activity_restaurantes">RestaurantesActivity</string>
    <string name="title_activity_adondeir">AdondeirActivity</string>
    <string name="title_activity_eventos">EventosActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="ranking_general">RANKING GENERAL</string>
    <string name="title_activity_login_sing_up">LoginSingUpActivity</string>
    <string name="prompt_first_name">Nombre</string>
    <string name="prompt_last_name">Apellido</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_zona">Ingresa tu zona</string>
    <string name="prompt_asiento">Número de asiento</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="sign_up">Registrarse</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">correo electrónico, </string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Porfavor ingrese los campos requeridos. "</string>
    <string name="error_blank_first_name">su nombre, </string>
    <string name="error_blank_last_name">su apellido, </string>
    <string name="error_blank_zona">una zona, </string>
    <string name="error_blank_asiento">un asiento, </string>
    <string name="error_blank_genero">un género, </string>
    <string name="usuario_existente">Usuario existente</string>
    <string name="gracias_por_registrarte">Gracias por registrarte!</string>
    <string name="selecciona_genero">Género</string>
    <string name="selecciona_edad">Edad</string>
    <string name="selecciona_zona">Zona</string>
    <string name="selecciona_asientos">Grada</string>
    <string name="campos_obligatorios">Todos los campos son obligatorios</string>
    <string name="porfavor_espere">Por favor espere.</string>
    <string name="porfavor_espere_extendido">Registrando. Por favor espere.</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string-array name="gender_arrays">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="zonas_arrays">
        <item>Verde</item>
        <item>Azul</item>
        <item>Morada</item>
        <item>Amarilla</item>
        <item>Naranja</item>
        <item>Gris</item>
        <item>Café</item>
    </string-array>
    <string-array name="asientos_arrays">
        <item>GRANDSTANDS - GRADA 1</item>
        <item>GRANDSTANDS - GRADA 2</item>
        <item>GRADAS PLATINO - GRADA 5</item>
        <item>GRADAS PLATINO - GRADA 9</item>
        <item>GRADAS PLATINO - GRADA 10</item>
        <item>GRADAS PLATINO - GRADA 11</item>
        <item>GRADAS ORO - GRADA 3</item>
        <item>GRADAS ORO - GRADA 4</item>
        <item>GRADAS ORO - GRADA 6</item>
        <item>GRADAS ORO - GRADA 7</item>
        <item>GRADAS ORO - GRADA 8</item>
        <item>GRADAS ORO - GRADA 12</item>
        <item>FORO SOL SUR - GRADA 14</item>
        <item>FORO SOL NORTE - GRADA 15</item>
        <item>ADMISIÓN GENERAL - GRADA 13</item>
        <item>ADMISIÓN GENERAL - GRADA 2A</item>
        <item>ADMISIÓN GENERAL - GRADA 2B</item>
        <item>ADMISIÓN GENERAL - GRADA 6A</item>
        <item>GRADA PLATA - GRADA 6B</item>
    </string-array>
    <string name="activa_gps">CON ESTA FUNCIÓN PODRÁS ENCONTRAR LAS MEJORES OPCIONES DE TRANSPORTE HACIA EL AUTÓDROMO</string>
    <string name="activa_notificaciones">CON ESTA FUNCIÓN RECIBIRÁS INFORMACIÓN EN TIEMPO REAL DEL EVENTO Y SUS RESULTADOS</string>
    <string name="activa_gps_ahora">ACTIVAR LOCALIZACIÓN</string>
    <string name="activa_notificaciones_ahora">ACTIVAR NOTIFICACIONES</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="ActivarNotificaciones">Activar Notificaciones</string>
    <string name="Geolocalizacion">Geolocalización</string>
    <string name="ActivarGeolocalizacion">Activar Geolocalización</string>
    <string name="politicas_privacidad">Política de privacidad</string>
    <string name="terminos_servicio">Términos de servicio</string>
    <string name="title_activity_politicas_privacidad">PoliticasPrivacidadActivity</string>
    <string name="title_activity_terminos_servicio">TerminosServicioActivity</string>
</resources>